--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "main": "src/index.js",
     "dependencies": {
+        "adm-zip": "^0.4.7",
         "babel-core": "^6.4.5",
         "babel-loader": "^6.2.1",
         "babel-preset-es2015": "^6.24.1",
@@ -26,6 +27,7 @@
         "react-redux": "^5.0.5",
         "react-tappable": "^0.8.3",
         "redux": "^3.7.2",
+        "shelljs": "^0.7.8",
         "webpack": "^1.12.12",
         "webpack-dev-server": "^1.14.1"
     },
